# cabalist

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  install.sh
.github/workflows/: ci.yml  publish.yml  release.yml
crates/cabalist-cabal/: Cargo.toml
crates/cabalist-cabal/src/: build.rs  detect.rs  diagnostics.rs  error.rs  invoke.rs  lib.rs  solver.rs
crates/cabalist-cli/: Cargo.toml
crates/cabalist-cli/src/: main.rs  util.rs
crates/cabalist-cli/src/commands/: add.rs  build.rs  check.rs  deps.rs  extensions.rs  fmt.rs  info.rs  init.rs  mod.rs  modules.rs  remove.rs  set.rs  update_index.rs
crates/cabalist-cli/tests/: cli_integration.rs  generate_integration.rs  pipeline_integration.rs
crates/cabalist-ghc/: Cargo.toml
crates/cabalist-ghc/data/: ghc-extensions.toml  ghc-warnings.toml
crates/cabalist-ghc/src/: extensions.rs  ghc2021.rs  lib.rs  versions.rs  warnings.rs
crates/cabalist-hackage/: Cargo.toml
crates/cabalist-hackage/src/: client.rs  error.rs  index.rs  lib.rs  pvp.rs  search.rs  types.rs
crates/cabalist-hackage/tests/: cache_resilience.rs
crates/cabalist-lsp/: Cargo.toml
crates/cabalist-lsp/src/: actions.rs  completions.rs  convert.rs  definition.rs  diagnostics.rs  formatting.rs  hover.rs  inlay_hints.rs  lib.rs  main.rs  rename.rs  semantic_tokens.rs  server.rs  state.rs  symbols.rs
crates/cabalist-lsp/tests/: concurrent_documents.rs
crates/cabalist-opinions/: Cargo.toml
crates/cabalist-opinions/data/: recommended-deps.toml
crates/cabalist-opinions/data/templates/: application.cabal.tmpl  full.cabal.tmpl  lib-and-exe.cabal.tmpl  library.cabal.tmpl
crates/cabalist-opinions/src/: config.rs  defaults.rs  deps.rs  fmt.rs  lib.rs  lints.rs  templates.rs
crates/cabalist-opinions/tests/: lint_integration.rs  real_world_regression.rs  regression_tests.rs
crates/cabalist-parser/: Cargo.toml
crates/cabalist-parser/src/: ast.rs  cst.rs  diagnostic.rs  edit.rs  lexer.rs  lib.rs  parse.rs  span.rs  validate.rs
crates/cabalist-parser/tests/: ast_integration.rs  corpus.rs  edit_scenarios.rs  edit_stress.rs  error_recovery.rs  proptest_roundtrip.rs  real_world_corpus.rs  validation_integration.rs
crates/cabalist-project/: Cargo.toml
crates/cabalist-project/src/: lib.rs  parse.rs  types.rs
crates/cabalist-tui/: Cargo.toml
crates/cabalist-tui/src/: app.rs  event.rs  input.rs  lib.rs  main.rs  theme.rs
crates/cabalist-tui/src/views/: build.rs  dashboard.rs  deps.rs  extensions.rs  help.rs  init.rs  metadata.rs  mod.rs  project.rs
crates/cabalist-tui/src/widgets/: header.rs  mod.rs  search.rs  status_bar.rs
crates/cabalist-tui/tests/: app_logic.rs  view_rendering.rs
data/templates/: application.cabal.tmpl  full.cabal.tmpl  lib-and-exe.cabal.tmpl  library.cabal.tmpl
docs/: cabal-spec-compliance.md  cli-reference.md  configuration.md  editor-setup.md  getting-started.md  keybindings.md  opinions.md  tui-guide.md
editors/emacs/: cabalist-lsp.el
editors/neovim/: init.lua
editors/vscode/: .vscodeignore  language-configuration.json  package-lock.json  package.json
editors/vscode/snippets/: cabal.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: cabal.tmLanguage.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_edit.rs  fuzz_parse.rs  fuzz_roundtrip.rs
packaging/homebrew/: cabalist.rb
tests/fixtures/real-world/: Cabal.cabal  ansi-terminal.cabal  clay.cabal  criterion.cabal  deepseq.cabal  directory.cabal  exceptions.cabal  haskeline.cabal  mtl.cabal  optics.cabal  parsec.cabal  process.cabal  req.cabal  template-haskell.cabal  typed-process.cabal  unix.cabal
