[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshburgess/cabalist"
homepage = "https://github.com/joshburgess/cabalist"
keywords = ["haskell", "cabal", "tui", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
