[package]
name = "cabalist-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cabalist-parser = { path = "../crates/cabalist-parser" }

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_edit"
path = "fuzz_targets/fuzz_edit.rs"
doc = false
