[package]
name = "cabalist-cabal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interface to the cabal CLI subprocess"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
