[package]
name = "cabalist-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Non-interactive CLI for managing Haskell .cabal files"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "cabalist-cli"
path = "src/main.rs"

[dependencies]
cabalist-parser = { path = "../cabalist-parser" }
cabalist-ghc = { path = "../cabalist-ghc" }
cabalist-hackage = { path = "../cabalist-hackage" }
cabalist-opinions = { path = "../cabalist-opinions" }
cabalist-cabal = { path = "../cabalist-cabal" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
