[package]
name = "cabalist-hackage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hackage package index, search, and version bounds"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", features = ["json", "gzip"], optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
directories = { version = "5", optional = true }

[features]
default = []
network = ["reqwest", "flate2", "tar", "directories"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
