[package]
name = "cabalist-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for .cabal files"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "cabalist-lsp"
path = "src/main.rs"

[dependencies]
cabalist-parser = { path = "../cabalist-parser" }
cabalist-ghc = { path = "../cabalist-ghc" }
cabalist-hackage = { path = "../cabalist-hackage" }
cabalist-opinions = { path = "../cabalist-opinions" }
tower-lsp = "0.20"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
directories = "5"
