[package]
name = "cabalist-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CST/AST parser for .cabal files with round-trip fidelity"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
