[package]
name = "cabalist-project"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parser for cabal.project files"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
thiserror.workspace = true
